--- a/about.html
+++ b/about.html
@@ -15,7 +15,8 @@
 	<hr/>
 	<h2>Наши преимущества</h2>
 	<ul>
-		<li>Качество</li>
+        <li>Мы любим всех зверей</li>
+		<li>Высокое качество товаров и обслуживания</li>
 		<li>Бесплатная доставка</li>
 		<li>Выгодные цены</li>
 		<li>Бонусы за преданность</li>
