--- a/zooshopindex.html
+++ b/zooshopindex.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1 align="center">ЗООМАГАЗИН</h1>
-<img src="Polosatik.jpg" width="400"/>
+<img src="Polosatik 2.jpg" width="400"/>
 <h2 align="center">НАШИ ТОВАРЫ</h2>
 
 <table border="1" width="100%">
