Изменения текста и фото

--- a/zooshopindex.html
+++ b/zooshopindex.html
@@ -7,6 +7,13 @@
 <body>
 <h1 align="center">ЗООМАГАЗИН</h1>
 <img src="Polosatik 2.jpg" width="400"/>
+
+    <a href="#коты">Коты</a>
+    <a href="#собаки">Собаки</a>
+    <a href="#птицы">Птицы</a>
+    <a href="#корм">Корм</a>
+    <a href="#болезни">Болезни</a>
+
 <h2 align="center">НАШИ ТОВАРЫ</h2>
 
 <table border="1" width="100%">
@@ -51,3 +58,28 @@
 <a href="about.html">Описание компании</a>
 </body>
 </html>
+
+<h3 align=>Коты - самые крвсивые домашние животные</h3>
+<p>
+    <a id="коты"></a> Подборка лучших фраз и статусов о котах. ... Статусы про котов и кошек смешные и прикольные. Кот: «мяу». Я «мяу». Кот «мяу мяу». Я «Чудо! Я заговорил по-кошачьи»!!! ... Голодная кошка – это самый крутой будильник! Только кошки знают, как получить пищу без труда, жилище без замка и любовь без треволнений. (У. Л. Джордж).
+</p>
+
+<h3 align=>Собаки самые преданные</h3>
+<p>
+    <a id="собаки"></a> Всякая собака, живущая с любящими людьми, почитает хозяев как божество. Но эти породы отличаются особой преданностью. Если вам или вашему ребенку нужен настоящий друг, выбирайте из них.
+</p>
+
+<h3 align=>Птицы-украшение и радость в доме</h3>
+<p>
+    <a id="птицы"></a> Приметы о залетевшей в дом птице, их происхождение и толкование. Примета о залетевшей в дом птице уходит корнями в глубокое прошлое и укоренилась после того, как из поколения в поколение стали замечать, что после неожиданного визита в дом птицы обязательно стоит ожидать какого-то важного события, перемен.
+</p>
+
+<h3 align=>Какой корм полезен птицам</h3>
+<p>
+    <a id="корм"></a> Корм для домашней птицы можно изготовить самостоятельно, закупив все компоненты по оптовой цене. Это должна быть сбалансированная кормовая база, состоящая, как минимум, из восьми компонентов.
+</p>
+
+<h3 align=>От чего домашние животные болеют?</h3>
+<p>
+    <a id="болезнь"></a> Если кролик заболел в результате воздействия сквозняка, ему помогут тепло, витамины и чистый воздух. При попадании пыли, вредных газов или других веществ в дыхательные пути, в нос вводят фурацилин (по 4 капли в каждую ноздрю). Когда поражение сильное, используется антибактериальный препарат. Лечение кролика при травмах зависит от вида и степени поражения. В случае ушиба на поврежденное место прикладывается холодный компресс. Если рана открытая и началось кровотечение, его нужно сначала остановить, а затем провести обработку йодом
+</p>
