Изменения текста и фото !

--- a/zooshopindex.html
+++ b/zooshopindex.html
@@ -81,5 +81,5 @@
 
 <h3 align=>От чего домашние животные болеют?</h3>
 <p>
-    <a id="болезнь"></a> Если кролик заболел в результате воздействия сквозняка, ему помогут тепло, витамины и чистый воздух. При попадании пыли, вредных газов или других веществ в дыхательные пути, в нос вводят фурацилин (по 4 капли в каждую ноздрю). Когда поражение сильное, используется антибактериальный препарат. Лечение кролика при травмах зависит от вида и степени поражения. В случае ушиба на поврежденное место прикладывается холодный компресс. Если рана открытая и началось кровотечение, его нужно сначала остановить, а затем провести обработку йодом
+    <a id="болезни"></a> Если кролик заболел в результате воздействия сквозняка, ему помогут тепло, витамины и чистый воздух. При попадании пыли, вредных газов или других веществ в дыхательные пути, в нос вводят фурацилин (по 4 капли в каждую ноздрю). Когда поражение сильное, используется антибактериальный препарат. Лечение кролика при травмах зависит от вида и степени поражения. В случае ушиба на поврежденное место прикладывается холодный компресс. Если рана открытая и началось кровотечение, его нужно сначала остановить, а затем провести обработку йодом
 </p>
