Новые страницы и фото !

--- a/zooshopindex.html
+++ b/zooshopindex.html
@@ -83,3 +83,7 @@
 <p>
     <a id="болезни"></a> Если кролик заболел в результате воздействия сквозняка, ему помогут тепло, витамины и чистый воздух. При попадании пыли, вредных газов или других веществ в дыхательные пути, в нос вводят фурацилин (по 4 капли в каждую ноздрю). Когда поражение сильное, используется антибактериальный препарат. Лечение кролика при травмах зависит от вида и степени поражения. В случае ушиба на поврежденное место прикладывается холодный компресс. Если рана открытая и началось кровотечение, его нужно сначала остановить, а затем провести обработку йодом
 </p>
+
+<a href="help.html">Контакты</a>
+<a href="orders.html">Заказ товара</a>
+<a href="registry.html">Обратная связь</a>
