--- a/help.html
+++ b/help.html
@@ -26,21 +26,22 @@
                     <li><a href="orders.html">Заказ товара</a></li>
                     <li><a href="registry.html">Обратная связь</a></li>
                 </ul>
-            <td height="700" valign="top" >Помощь</td>
+            <td height="700" valign="top" align="center">
+                <b>Помощь</b>
+            </td>
 
 
         </tr>
-        <tr bgcolor="#ff4c4c">
-            <td height="100" valign="top" align="centr">
+        <tr bgcolor="#91524f">
+            <td height="100" align="center">
                 <font color="#fff" size="4"> +358 555 777 </font>
             </td>
-            <td colspan="2">
+            <td colspan="2" height="100" align="center">
                 <font color="#fff" size="4">
                     <b>
                         Симферополь, пр.Кирова 7
                     </b>
                 </font>
-
             </td>
         </tr>
 
